crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_record_indent_field.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f {x,\ny} = 1"
---
nash::syntax

  × Expected an indented record field.
   ╭─[src/Main.nash:2:1]
 1 │ f {x,
 2 │ y} = 1
   · ─
   ╰────
  help: Indent the field inside the braces.
