crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_record_open.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f {= = 1"
---
nash::syntax

  × Expected a field name in this record pattern.
   ╭─[src/Main.nash:1:4]
 1 │ f {= = 1
   ·    ─
   ╰────
  help: List the required field names, separated by commas.
