crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_tuple_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I ran into the = symbol unexpectedly in this pattern:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Only the :: symbol works in patterns. It is useful if you are pattern matching
        on lists, trying to get the first element off the front. Did you want that
        instead?
