crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_tuple_expr.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected an argument pattern.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Use a variable, constructor pattern, or `_`.
