crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_tuple_indent_expr_n.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected an indented tuple pattern.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add a pattern inside the parentheses; separate elements with commas.
