crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_tuple_open.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: f (= = 1
---
nash::syntax

  × Expected a pattern after `(`.
   ╭─[src/Main.nash:1:4]
 1 │ f (= = 1
   ·    ─
   ╰────
  help: Add a pattern, or close an empty tuple with `)`.
